--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -16,6 +16,7 @@ services:
       - NODE_ENV=development
       - NEXT_PUBLIC_DEFAULT_API_URL=http://localhost:11434
       - NEXT_PUBLIC_DEFAULT_MODEL=llama3.1
+      - NEXT_PUBLIC_DEFAULT_CONFIG_ID=ollama-default
     networks:
       - translator-network
     restart: unless-stopped
