--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
+        "build:static": "NEXT_STATIC_EXPORT=true next build",
         "start": "next start",
         "lint": "next lint"
     },
