--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "axios": "^1.12.2",
         "next": "^14.0.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
-        "react-icons": "^4.12.0",
-        "axios": "^1.6.0"
+        "react-icons": "^4.12.0"
     },
     "devDependencies": {
         "@types/node": "^20.0.0",
