--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -39,6 +39,9 @@ jobs:
       - name: Build static site
         run: npm run build:static
 
+      - name: Disable Jekyll processing
+        run: touch out/.nojekyll
+
       - name: Upload artifact for GitHub Pages
         uses: actions/upload-pages-artifact@v3
         with:
